share: add received share spec
