# gen/proto/go/cernbox/share/v1/resources.pb.go
@@ -48,6 +48,37 @@ func (TargetType) EnumDescriptor() ([]byte, []int) {
 	return fileDescriptor_5b5e7f8336031b9d, []int{0}
 }
 
+type ReceivedShareState int32
+
+const (
+	ReceivedShareState_RECEIVED_SHARE_STATE_INVALID  ReceivedShareState = 0
+	ReceivedShareState_RECEIVED_SHARE_STATE_ACCEPTED ReceivedShareState = 1
+	ReceivedShareState_RECEIVED_SHARE_STATE_REJECTED ReceivedShareState = 2
+	ReceivedShareState_RECEIVED_SHARE_STATE_PENDING  ReceivedShareState = 3
+)
+
+var ReceivedShareState_name = map[int32]string{
+	0: "RECEIVED_SHARE_STATE_INVALID",
+	1: "RECEIVED_SHARE_STATE_ACCEPTED",
+	2: "RECEIVED_SHARE_STATE_REJECTED",
+	3: "RECEIVED_SHARE_STATE_PENDING",
+}
+
+var ReceivedShareState_value = map[string]int32{
+	"RECEIVED_SHARE_STATE_INVALID":  0,
+	"RECEIVED_SHARE_STATE_ACCEPTED": 1,
+	"RECEIVED_SHARE_STATE_REJECTED": 2,
+	"RECEIVED_SHARE_STATE_PENDING":  3,
+}
+
+func (x ReceivedShareState) String() string {
+	return proto.EnumName(ReceivedShareState_name, int32(x))
+}
+
+func (ReceivedShareState) EnumDescriptor() ([]byte, []int) {
+	return fileDescriptor_5b5e7f8336031b9d, []int{1}
+}
+
 type Permissions struct {
 	Read                 bool     `protobuf:"varint,1,opt,name=read,proto3" json:"read,omitempty"`
 	Modify               bool     `protobuf:"varint,2,opt,name=modify,proto3" json:"modify,omitempty"`
@@ -229,41 +260,161 @@ func (m *UpdatePolicy) GetUpdatePermissions() bool {
 	return false
 }
 
+type ReceivedShare struct {
+	Id                   string             `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Filename             string             `protobuf:"bytes,2,opt,name=filename,proto3" json:"filename,omitempty"`
+	Target               string             `protobuf:"bytes,3,opt,name=target,proto3" json:"target,omitempty"`
+	TargetType           TargetType         `protobuf:"varint,4,opt,name=target_type,json=targetType,proto3,enum=cernbox.sharev1.TargetType" json:"target_type,omitempty"`
+	Permissions          *Permissions       `protobuf:"bytes,5,opt,name=permissions,proto3" json:"permissions,omitempty"`
+	Ctime                uint64             `protobuf:"varint,6,opt,name=ctime,proto3" json:"ctime,omitempty"`
+	Mtime                uint64             `protobuf:"varint,7,opt,name=mtime,proto3" json:"mtime,omitempty"`
+	DisplayName          string             `protobuf:"bytes,8,opt,name=display_name,json=displayName,proto3" json:"display_name,omitempty"`
+	Owner                string             `protobuf:"bytes,9,opt,name=owner,proto3" json:"owner,omitempty"`
+	State                ReceivedShareState `protobuf:"varint,10,opt,name=state,proto3,enum=cernbox.sharev1.ReceivedShareState" json:"state,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}           `json:"-"`
+	XXX_unrecognized     []byte             `json:"-"`
+	XXX_sizecache        int32              `json:"-"`
+}
+
+func (m *ReceivedShare) Reset()         { *m = ReceivedShare{} }
+func (m *ReceivedShare) String() string { return proto.CompactTextString(m) }
+func (*ReceivedShare) ProtoMessage()    {}
+func (*ReceivedShare) Descriptor() ([]byte, []int) {
+	return fileDescriptor_5b5e7f8336031b9d, []int{3}
+}
+
+func (m *ReceivedShare) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_ReceivedShare.Unmarshal(m, b)
+}
+func (m *ReceivedShare) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_ReceivedShare.Marshal(b, m, deterministic)
+}
+func (m *ReceivedShare) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_ReceivedShare.Merge(m, src)
+}
+func (m *ReceivedShare) XXX_Size() int {
+	return xxx_messageInfo_ReceivedShare.Size(m)
+}
+func (m *ReceivedShare) XXX_DiscardUnknown() {
+	xxx_messageInfo_ReceivedShare.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_ReceivedShare proto.InternalMessageInfo
+
+func (m *ReceivedShare) GetId() string {
+	if m != nil {
+		return m.Id
+	}
+	return ""
+}
+
+func (m *ReceivedShare) GetFilename() string {
+	if m != nil {
+		return m.Filename
+	}
+	return ""
+}
+
+func (m *ReceivedShare) GetTarget() string {
+	if m != nil {
+		return m.Target
+	}
+	return ""
+}
+
+func (m *ReceivedShare) GetTargetType() TargetType {
+	if m != nil {
+		return m.TargetType
+	}
+	return TargetType_TARGET_TYPE_INVALID
+}
+
+func (m *ReceivedShare) GetPermissions() *Permissions {
+	if m != nil {
+		return m.Permissions
+	}
+	return nil
+}
+
+func (m *ReceivedShare) GetCtime() uint64 {
+	if m != nil {
+		return m.Ctime
+	}
+	return 0
+}
+
+func (m *ReceivedShare) GetMtime() uint64 {
+	if m != nil {
+		return m.Mtime
+	}
+	return 0
+}
+
+func (m *ReceivedShare) GetDisplayName() string {
+	if m != nil {
+		return m.DisplayName
+	}
+	return ""
+}
+
+func (m *ReceivedShare) GetOwner() string {
+	if m != nil {
+		return m.Owner
+	}
+	return ""
+}
+
+func (m *ReceivedShare) GetState() ReceivedShareState {
+	if m != nil {
+		return m.State
+	}
+	return ReceivedShareState_RECEIVED_SHARE_STATE_INVALID
+}
+
 func init() {
 	proto.RegisterEnum("cernbox.sharev1.TargetType", TargetType_name, TargetType_value)
+	proto.RegisterEnum("cernbox.sharev1.ReceivedShareState", ReceivedShareState_name, ReceivedShareState_value)
 	proto.RegisterType((*Permissions)(nil), "cernbox.sharev1.Permissions")
 	proto.RegisterType((*Share)(nil), "cernbox.sharev1.Share")
 	proto.RegisterType((*UpdatePolicy)(nil), "cernbox.sharev1.UpdatePolicy")
+	proto.RegisterType((*ReceivedShare)(nil), "cernbox.sharev1.ReceivedShare")
 }
 
 func init() { proto.RegisterFile("cernbox/share/v1/resources.proto", fileDescriptor_5b5e7f8336031b9d) }
 
 var fileDescriptor_5b5e7f8336031b9d = []byte{
-	// 415 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x64, 0x52, 0xd1, 0x8a, 0xd3, 0x40,
-	0x14, 0x35, 0x63, 0x1b, 0xdb, 0x9b, 0xa5, 0xcd, 0xce, 0xae, 0x1a, 0xd4, 0x87, 0xd8, 0xa7, 0x20,
-	0x98, 0xd2, 0xf5, 0x49, 0x50, 0xa1, 0xa9, 0x61, 0x59, 0x90, 0x6e, 0x98, 0xa6, 0x45, 0x45, 0x08,
-	0x69, 0x32, 0xd5, 0x81, 0x26, 0x13, 0x26, 0x69, 0x69, 0xfe, 0xc4, 0x67, 0x1f, 0xfd, 0x14, 0xbf,
-	0x4a, 0x32, 0x89, 0x6d, 0xa8, 0x6f, 0xf7, 0x9c, 0x73, 0xcf, 0x70, 0xcf, 0x9d, 0x0b, 0x66, 0x44,
-	0x45, 0xba, 0xe6, 0x87, 0x71, 0xfe, 0x23, 0x14, 0x74, 0xbc, 0x9f, 0x8c, 0x05, 0xcd, 0xf9, 0x4e,
-	0x44, 0x34, 0xb7, 0x33, 0xc1, 0x0b, 0x8e, 0x87, 0x4d, 0x87, 0x2d, 0x3b, 0xf6, 0x93, 0xd1, 0x5b,
-	0xd0, 0x3c, 0x2a, 0x12, 0x96, 0xe7, 0x8c, 0xa7, 0x39, 0xc6, 0xd0, 0x11, 0x34, 0x8c, 0x0d, 0xc5,
-	0x54, 0xac, 0x1e, 0x91, 0x35, 0x7e, 0x02, 0x6a, 0xc2, 0x63, 0xb6, 0x29, 0x0d, 0x24, 0xd9, 0x06,
-	0x8d, 0x7e, 0x22, 0xe8, 0x2e, 0xaa, 0x67, 0xf0, 0x00, 0x10, 0xab, 0x3d, 0x7d, 0x82, 0x58, 0x8c,
-	0x9f, 0x41, 0x6f, 0xc3, 0xb6, 0x34, 0x0d, 0x13, 0x2a, 0x3d, 0x7d, 0x72, 0xc4, 0xd5, 0x6b, 0x45,
-	0x28, 0xbe, 0xd3, 0xc2, 0x78, 0x28, 0x95, 0x06, 0xe1, 0x77, 0xa0, 0xd5, 0x55, 0x50, 0x94, 0x19,
-	0x35, 0x3a, 0xa6, 0x62, 0x0d, 0x6e, 0x9e, 0xdb, 0x67, 0xf3, 0xda, 0xbe, 0xec, 0xf1, 0xcb, 0x8c,
-	0x12, 0x28, 0x8e, 0x35, 0xfe, 0x00, 0x5a, 0x76, 0x8a, 0x61, 0x74, 0x4d, 0xc5, 0xd2, 0x6e, 0x5e,
-	0xfc, 0xe7, 0x6e, 0x45, 0x25, 0x6d, 0x03, 0xbe, 0x86, 0x6e, 0x54, 0xb0, 0x84, 0x1a, 0xaa, 0xa9,
-	0x58, 0x1d, 0x52, 0x83, 0x8a, 0x4d, 0x24, 0xfb, 0xa8, 0x66, 0x25, 0xc0, 0x2f, 0xe1, 0x22, 0x66,
-	0x79, 0xb6, 0x0d, 0xcb, 0x40, 0x26, 0xec, 0xc9, 0x1c, 0x5a, 0xc3, 0xcd, 0xc3, 0x84, 0x8e, 0xde,
-	0xc3, 0xc5, 0x32, 0x8b, 0xc3, 0x82, 0x7a, 0x7c, 0xcb, 0xa2, 0x12, 0xbf, 0x06, 0xbc, 0x93, 0x38,
-	0x68, 0x4f, 0x59, 0x2f, 0xf9, 0xb2, 0x56, 0x5a, 0xa3, 0xbd, 0x22, 0x00, 0xa7, 0x9c, 0xf8, 0x29,
-	0x5c, 0xf9, 0x53, 0x72, 0xeb, 0xfa, 0x81, 0xff, 0xc5, 0x73, 0x83, 0xbb, 0xf9, 0x6a, 0xfa, 0xe9,
-	0xee, 0xa3, 0xfe, 0x00, 0x5f, 0x83, 0xde, 0x16, 0x96, 0x0b, 0x97, 0xe8, 0x0a, 0x7e, 0x0c, 0x97,
-	0x6d, 0xf6, 0x96, 0xdc, 0x2f, 0x3d, 0x1d, 0x39, 0x01, 0x5c, 0x45, 0x3c, 0x39, 0xdf, 0x88, 0x33,
-	0x20, 0xff, 0x2e, 0xc4, 0xab, 0x0e, 0xc4, 0x53, 0xbe, 0xf6, 0x1b, 0x29, 0x5b, 0xff, 0x42, 0xea,
-	0xcc, 0xb9, 0xff, 0x3c, 0x75, 0x7e, 0xa3, 0xe1, 0xcc, 0x25, 0x73, 0x87, 0x1f, 0x6c, 0xf9, 0xe1,
-	0xab, 0xc9, 0x1f, 0x34, 0x9c, 0x51, 0x91, 0x3a, 0xfc, 0xf0, 0xad, 0x61, 0xd6, 0xaa, 0xbc, 0xb0,
-	0x37, 0x7f, 0x03, 0x00, 0x00, 0xff, 0xff, 0xdd, 0x85, 0xae, 0x79, 0x85, 0x02, 0x00, 0x00,
+	// 527 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xec, 0x54, 0xc1, 0x6e, 0xd3, 0x40,
+	0x10, 0xc5, 0x6e, 0x12, 0x92, 0x49, 0x49, 0xdc, 0x6d, 0x01, 0x0b, 0x8a, 0xe4, 0x86, 0x4b, 0x54,
+	0x89, 0x44, 0x29, 0xa7, 0x4a, 0x80, 0x64, 0x3b, 0xab, 0x10, 0x84, 0x52, 0x6b, 0xe3, 0x44, 0x80,
+	0x90, 0x2c, 0xc7, 0xde, 0x82, 0xa5, 0x38, 0x6b, 0xad, 0xdd, 0x10, 0xff, 0x09, 0x27, 0x0e, 0x1c,
+	0xf9, 0x14, 0xfe, 0x86, 0x3f, 0x40, 0x5e, 0x9b, 0xd6, 0x34, 0xed, 0x1f, 0xf4, 0xb6, 0xef, 0xcd,
+	0x7b, 0x3b, 0xf3, 0xe6, 0x30, 0xa0, 0x79, 0x94, 0xaf, 0x16, 0x6c, 0xd3, 0x8f, 0xbf, 0xba, 0x9c,
+	0xf6, 0xd7, 0x83, 0x3e, 0xa7, 0x31, 0xbb, 0xe0, 0x1e, 0x8d, 0x7b, 0x11, 0x67, 0x09, 0x43, 0xed,
+	0x42, 0xd1, 0x13, 0x8a, 0xf5, 0xa0, 0x73, 0x0a, 0x4d, 0x8b, 0xf2, 0x30, 0x88, 0xe3, 0x80, 0xad,
+	0x62, 0x84, 0xa0, 0xc2, 0xa9, 0xeb, 0xab, 0x92, 0x26, 0x75, 0xeb, 0x44, 0xbc, 0xd1, 0x23, 0xa8,
+	0x85, 0xcc, 0x0f, 0xce, 0x53, 0x55, 0x16, 0x6c, 0x81, 0x3a, 0xdf, 0x65, 0xa8, 0x4e, 0xb3, 0x6f,
+	0x50, 0x0b, 0xe4, 0x20, 0xf7, 0x34, 0x88, 0x1c, 0xf8, 0xe8, 0x09, 0xd4, 0xcf, 0x83, 0x25, 0x5d,
+	0xb9, 0x21, 0x15, 0x9e, 0x06, 0xb9, 0xc4, 0xd9, 0x6f, 0x89, 0xcb, 0xbf, 0xd0, 0x44, 0xdd, 0x11,
+	0x95, 0x02, 0xa1, 0x57, 0xd0, 0xcc, 0x5f, 0x4e, 0x92, 0x46, 0x54, 0xad, 0x68, 0x52, 0xb7, 0x75,
+	0xf2, 0xb4, 0x77, 0x6d, 0xde, 0x9e, 0x2d, 0x34, 0x76, 0x1a, 0x51, 0x02, 0xc9, 0xe5, 0x1b, 0xbd,
+	0x81, 0x66, 0x74, 0x15, 0x43, 0xad, 0x6a, 0x52, 0xb7, 0x79, 0x72, 0xb8, 0xe5, 0x2e, 0x45, 0x25,
+	0x65, 0x03, 0x3a, 0x80, 0xaa, 0x97, 0x04, 0x21, 0x55, 0x6b, 0x9a, 0xd4, 0xad, 0x90, 0x1c, 0x64,
+	0x6c, 0x28, 0xd8, 0xfb, 0x39, 0x2b, 0x00, 0x3a, 0x82, 0x5d, 0x3f, 0x88, 0xa3, 0xa5, 0x9b, 0x3a,
+	0x22, 0x61, 0x5d, 0xe4, 0x68, 0x16, 0xdc, 0xc4, 0x0d, 0x69, 0xe7, 0x35, 0xec, 0xce, 0x22, 0xdf,
+	0x4d, 0xa8, 0xc5, 0x96, 0x81, 0x97, 0xa2, 0x17, 0x80, 0x2e, 0x04, 0x76, 0xca, 0x53, 0xe6, 0x4b,
+	0xde, 0xcb, 0x2b, 0xa5, 0xd1, 0x3a, 0x7f, 0x64, 0x78, 0x40, 0xa8, 0x47, 0x83, 0x35, 0xf5, 0xef,
+	0x36, 0x7c, 0xd3, 0x86, 0x33, 0x23, 0xfb, 0xb6, 0xa2, 0x5c, 0x6d, 0x88, 0x5a, 0x0e, 0xd0, 0x29,
+	0x54, 0xe3, 0xc4, 0x4d, 0xa8, 0x0a, 0x22, 0xdc, 0xf3, 0xad, 0xf1, 0xfe, 0xdb, 0xea, 0x34, 0x93,
+	0x92, 0xdc, 0x71, 0x4c, 0x00, 0xae, 0x92, 0xa3, 0xc7, 0xb0, 0x6f, 0xeb, 0x64, 0x84, 0x6d, 0xc7,
+	0xfe, 0x68, 0x61, 0x67, 0x3c, 0x99, 0xeb, 0xef, 0xc7, 0x43, 0xe5, 0x1e, 0x3a, 0x00, 0xa5, 0x5c,
+	0x98, 0x4d, 0x31, 0x51, 0x24, 0xf4, 0x10, 0xf6, 0xca, 0xec, 0x88, 0x9c, 0xcd, 0x2c, 0x45, 0x3e,
+	0xfe, 0x21, 0x01, 0xda, 0xee, 0x88, 0x34, 0x38, 0x24, 0xd8, 0xc4, 0xe3, 0x39, 0x1e, 0x3a, 0xd3,
+	0xb7, 0x3a, 0xc1, 0xce, 0xd4, 0xd6, 0xed, 0x72, 0x97, 0x23, 0x78, 0x76, 0xa3, 0x42, 0x37, 0x4d,
+	0x6c, 0xd9, 0x78, 0xa8, 0x48, 0xb7, 0x4a, 0x08, 0x7e, 0x87, 0xcd, 0x4c, 0x22, 0xdf, 0xda, 0xc7,
+	0xc2, 0x93, 0xe1, 0x78, 0x32, 0x52, 0x76, 0x0c, 0x07, 0xf6, 0x3d, 0x16, 0x5e, 0xdf, 0x92, 0xd1,
+	0x22, 0xff, 0xce, 0x86, 0x95, 0x5d, 0x0d, 0x4b, 0xfa, 0xd4, 0x28, 0x4a, 0xd1, 0xe2, 0xa7, 0x5c,
+	0x33, 0x8d, 0xb3, 0x0f, 0xba, 0xf1, 0x4b, 0x6e, 0x9b, 0x98, 0x4c, 0x0c, 0xb6, 0xe9, 0x89, 0x6c,
+	0xf3, 0xc1, 0x6f, 0xb9, 0x6d, 0x52, 0xbe, 0x32, 0xd8, 0xe6, 0x73, 0xc1, 0x2c, 0x6a, 0xe2, 0xec,
+	0xbc, 0xfc, 0x1b, 0x00, 0x00, 0xff, 0xff, 0xab, 0x61, 0x2f, 0xce, 0x9a, 0x04, 0x00, 0x00,
 }
